--- a/splider/music/html/qq-music(2018-07-11).html
+++ b/splider/music/html/qq-music(2018-07-11).html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-    <title>QQ精品歌单(2018-07-11)</title>
+    <title>QQ音乐精品歌单(2018-07-11)</title>
     <style>
         body,
         html {
