--- a/splider/video/html/tencent-video.html
+++ b/splider/video/html/tencent-video.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-    <title>腾讯精品电影(2018-07-11)</title>
+    <title>腾讯视频精选电影</title>
     <style>
         body,
         html {
