--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             overflow-y: auto;
             height: 100vh;
             width: 100%;
+            -webkit-overflow-scrolling: touch;
         }
         body {
             background-color: #eeeeee;
