--- a/splider/music/html/qq-music(2018-07-11).html
+++ b/splider/music/html/qq-music(2018-07-11).html
@@ -20,6 +20,7 @@
             height: 100vh;
             width: 100%;
             padding-top: 15px;
+            -webkit-overflow-scrolling: touch;
         }
 
         body {
