--- a/splider/video/html/tencent-video.html
+++ b/splider/video/html/tencent-video.html
@@ -20,6 +20,7 @@
             height: 100vh;
             width: 100%;
             padding-top: 15px;
+            -webkit-overflow-scrolling: touch;
         }
 
         body {
