--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             overflow: hidden;
         }
         a {
-            text-decoration: none;
+            text-decoration: none !important;
         }
         .list .list-item{
             display: block;
