--- a/splider/music/html/qq-music(2018-07-11).html
+++ b/splider/music/html/qq-music(2018-07-11).html
@@ -31,7 +31,7 @@
         }
 
         a {
-            text-decoration: none;
+            text-decoration: none !important;
         }
 
         .list-item {
