--- a/splider/video/html/tencent-video.html
+++ b/splider/video/html/tencent-video.html
@@ -31,7 +31,7 @@
         }
 
         a {
-            text-decoration: none;
+            text-decoration: none !important;
         }
 
         .list-item {
