--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
             background-size: 100%;
             overflow: hidden;
         }
-        a {
+        a, a:focus, a:hover {
             text-decoration: none !important;
         }
+        
         .list .list-item{
             display: block;
             text-align: center;
