--- a/splider/music/html/netease-music(2018-07-11).html
+++ b/splider/music/html/netease-music(2018-07-11).html
@@ -30,7 +30,7 @@
             overflow: hidden;
         }
 
-        a {
+        a, a:focus, a:hover {
             text-decoration: none !important;
         }
 
