--- a/splider/video/html/tencent-video.html
+++ b/splider/video/html/tencent-video.html
@@ -30,7 +30,7 @@
             overflow: hidden;
         }
 
-        a {
+        a, a:focus, a:hover {
             text-decoration: none !important;
         }
 
