--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                     腾讯精品动漫(2018-07-11)
                 </a>
             </div>
+            <div class="col-xs-6 col-sm-6 col-md-4">
+                <a class="list-item"  href="./splider/cartoon/html/tencent-cartoon(2018-07-11).html">
+                    腾讯精品动漫(2018-08-31)
+                </a>
+            </div>
         </div>
         <div class="list-title">歌单</div>
         <div class="row list">
@@ -63,6 +68,16 @@
             <div class="col-xs-6 col-sm-6 col-md-4">
                 <a class="list-item"  href="./splider/music/html/qq-music(2018-07-11).html">
                     QQ音乐精品歌单(2018-07-11)
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-4">
+                <a class="list-item"  href="./splider/music/html/netease-music(2018-08-31).html">
+                    网易云音乐精品歌单(2018-08-31)
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-4">
+                <a class="list-item"  href="./splider/music/html/qq-music(2018-08-31).html">
+                    QQ音乐精品歌单(2018-08-31)
                 </a>
             </div>
         </div>
