--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
                     腾讯精品动漫(2018-08-31)
                 </a>
             </div>
+            <div class="col-xs-6 col-sm-6 col-md-4">
+                <a class="list-item"  href="./splider/cartoon/html/tencent-cartoon(2019-07-18).html">
+                    腾讯精品动漫(2019-07-18)
+                </a>
+            </div>
         </div>
         <div class="list-title">歌单</div>
         <div class="row list">
