--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
                 </a>
             </div>
             <div class="col-xs-6 col-sm-6 col-md-4">
+                <a class="list-item"  href="./splider/music/html/netease-music(2019-08-20).html">
+                    网易云音乐精品歌单(2019-08-20)
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-4">
                 <a class="list-item"  href="./splider/music/html/qq-music(2018-07-11).html">
                     QQ音乐精品歌单(2018-07-11)
                 </a>
